--- a/src/ak-tooltip/ak-tooltip.css
+++ b/src/ak-tooltip/ak-tooltip.css
@@ -73,6 +73,7 @@
     opacity: 0;
     padding: 0;
     position: absolute;
+    white-space: nowrap;
     transition:
         display var(--tooltip--TransitionDuration) var(--tooltip--TimingFunction) allow-discrete,
         overlay var(--tooltip--TransitionDuration) var(--tooltip--TimingFunction) allow-discrete;
